# ShiftNotes

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  CLASS_DELIVERABLES_AND_PRE_IMPLEMENTATION_CHECKLIST.md  CLAUDE.md  CURRENT_FORM_ANALYSIS.md  DATASET_REVIEW_NOTES.md  INDEPENDENT_BACKLOG.md  INDEPENDENT_PROJECT_DIRECTION.md  INGESTION_WORKFLOW_NOTES.md  MOCK_DATA_DESIGN.md  PRODUCT_VISION.md  RAG_BACKLOG.md  README.md  RISKS.md  SOLO_WORK_LOG.md  SPEC.MD  SUBMISSION_STATUS_2026-06-26.md  TEAM_PROTOTYPE_REVIEW.md  USER_EXPERIENCE.md  WEEK8_REPORT.md  pyproject.toml  run_pipeline.py  streamlit_app.py
.streamlit/: config.toml
briefings/: briefing_20260603_040748_test-001.txt  briefing_20260603_041301_4d06c05f.txt  briefing_20260603_204244_a79d4df3.txt  briefing_20260603_204353_f0356e0b.txt  briefing_20260603_204639_c9eaa064.txt
final_project/: .env.example  BRIEFING_DESIGN.md  CLAUDE_TECHNICAL_REPORT_CONTEXT.md  PRODUCT_WORKFLOW.md  README.md  TECHNICAL_REPORT.md  WEEK6_ARCHITECTURE.md  WEEK6_SUBMISSION_README.md  app.py  schedule_policy.json  week6_requirements.txt
prototype/: README.md  ROADMAP.md  ShiftNotes_Prototype.ipynb  app.py  ground_truth_targets.csv  mock_shift_notes.csv  signal_classifier.py
rag/: README.md  app.py
scripts/: build_week6_submission.py  generate_final_mock_dataset.py
shiftnotes_agent/: graph.py  logger.py  state.py
tests/: test_baseline_analysis.py  test_final_briefings.py  test_final_mock_dataset.py  test_gmail_delivery.py  test_jotform_normalize.py  test_langgraph_workflow.py  test_product_workflow.py  test_semantic_extraction.py  (+2 more)
(+117 files in other folders)
