[project]
name = "shiftnotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "jsonpointer>=3.1.1",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
