[project]
name = "shiftnotes"
version = "0.1.0"
description = "Email-first operational intelligence prototype for source-backed shift-note briefings."
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "groq>=0.33.0",
    "jupyter>=1.1.1",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "streamlit>=1.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "final_project/src"}

[tool.setuptools.packages.find]
where = ["final_project/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
